2009-06-04  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Released 0.3.31

	* configure.ac: 0.3.31

2009-06-03  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#120135 - bookmark widget thumbnail preview misaligned in
	allocated space

	* src/hd-bookmark-shortcut.c (BORDER_WIDTH_TOP): Fix border.

	* debian/changelog: Update.

2009-06-03  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#120026 - New notification category needed for foreground
	sms/chatmessages

	* src/hd-incoming-events.c (hd_incoming_events_notified):
	* src/hd-notification-manager.c (hd_notification_manager_notify):
	Support foreground sms/chat massags without notification windows.

	* debian/changelog: Update.

2009-06-03  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-task-shortcut.c (hd_task_shortcut_init): Use 5/6 size of
	SystemFont as font size (same as in task launcher).

2009-06-03  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#120622 - Multiple notification is not as expected

	* src/hd-change-background-dialog.c
	  (hd_change_background_dialog_constructed): Support image sets in
	  ~/MyDocs/.images

	* src/hd-incoming-event-window.c
	  (hd_incoming_event_window_update_title_and_amount,
	  hd_incoming_event_window_realize,
	  hd_incoming_event_window_set_property): Add "... " suffix to title
	  of multiple notifications in task switcher.

2009-06-02  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#118133 - Icon for Maemo in Add bookmark of Desktop menu is
	large in size

	* src/hd-bookmark-manager.c (hd_bookmark_manager_add_bookmark_item):
	Scale images to correct size in "Add bookmark" dialog.

	* src/notification-groups.conf: Add definition for class 0 sms message
	category.

	* debian/changelog: Update.

2009-06-01  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Released 0.3.30

	* configure.ac: 0.3.30

2009-05-29  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#112313 - Required implementation details for attaching