@@ -1,6 +1,8 @@
 hildon-home (0.3.32~unreleased) unstable; urgency=low
 
-  * foo
+  Jan Arne
+  * Fixes: NB#120707 - Time in task switcher for notification not showing
+    properly and not updated
 
  -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Thu,  4 Jun 2009 11:03:01 +0300
 
