@@ -1,3 +1,13 @@
+2009-06-04  Jan Arne Petersen  <jpetersen@openismus.com>
+
+	Fixes: NB#120707 - Time in task switcher for notification not showing
+	properly and not updated
+	
+	* src/hd-incoming-event-window.c (MINUTE, HOUR, DAY, YEAR): Fixes
+	macros.
+
+	* debian/changelog: Update.
+
 2009-06-04  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
 
 	Released 0.3.31
